gitops/shared-services/gitlab/ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gitlab-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`gitlab.nooblearn2code.com`)
      kind: Rule
      services:
        - name: gitlab-service
          port: 80
      # middlewares:
      #   - name: secure-headers
  tls:
    secretName: gitlab-tls-secret

---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: gitlab-ssh-route
spec:
  entryPoints:
    - gitlab-ssh
  routes:
    - match: HostSNI(`*`)
      services:
        - name: gitlab-service
          port: 22
